# euler-rs

./: Cargo.toml
.cargo/: config
euler-macro/: Cargo.toml
euler-macro/src/: attribute.rs  lib.rs
euler-macro/tests/: 01_easy.rs  02_easy.rs
euler-trait/: Cargo.toml
euler-trait/src/: lib.rs
src/: common.rs  first_twenty.rs  lib.rs  main.rs  twenty_forty.rs  utils.rs
src/utils/: coins.rs  divisors.rs  numbers.rs  strings.rs
