[package]
name = "pe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[lib]
name = "pe"
path = "src/lib.rs"

[[bin]]
name = "euler"
path = "src/main.rs"

[dependencies]
bit-set = "0.5.3"
bit-vec = "0.6.3"
chrono = "0.4.22"
clap = { version = "4.0.18", features = ["derive"] }
color-eyre = "0.6.2"
inventory = "0.3.2"
itertools = "0.10.5"
memoize = "0.3.1"
mimalloc = { version = "0.1.30", default-features = false }
ndarray = "0.15.6"
nom = "7.1.1"
num = "0.4.0"
textwrap = "0.16.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
euler-macro = { path = "euler-macro" }
euler-trait = { version = "0.1.0", path = "euler-trait" }
primes = "0.3.0"
once_cell = "1.16.0"
ouroboros = "0.15.5"
