[package]
name = "euler-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
dashmap = "5.4.0"
euler-trait = { version = "0.1.0", path = "../euler-trait" }
once_cell = "1.16.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full"] }

[dev-dependencies]
trybuild = { version = "1.0.71", features = ["diff"] }
